# AiAgentExperiment

./: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  docker-compose.yml
docs/: api-contracts.md  (+5 more)
server/: alembic.ini  pyproject.toml
server/app/: config.py  main.py
server/app/agents/: actions.py  dialogue.py  executor.py  lifecycle.py  needs.py  perception.py  planner.py  planner_hints.py  runtime.py  utility_ai.py
server/app/api/: dependencies.py  errors.py  routes_admin.py  routes_agents.py  routes_debug.py  routes_memory.py  routes_world.py
server/app/cognition/: belief_updater.py  goal_updater.py  llm_client.py  output_parser.py  prompt_builder.py  reflection.py  reflection_graph.py  slow_loop.py  triggers.py  validation.py
server/app/db/: alembic_config.py  base.py  enums.py  session.py  types.py
server/app/engine/: event_bus.py  event_listeners.py  scheduler.py  sim_clock.py  tick_loop.py  world_loop.py  world_state.py
server/app/memory/: beliefs.py  embeddings.py  pipeline.py  relationships.py  retrieval.py  retriever.py  salience.py  service.py  summarizer.py  summary_queue.py  writer.py
server/app/schemas/: agent.py  api.py  event.py  memory.py  metrics.py  reflection.py
server/app/services/: world_seed_service.py
server/migrations/: env.py
server/scripts/: init_db.py  run_batch_sim.py  seed_agents.py  seed_world.py  verify_action_catalog_flow.py  verify_daily_metrics_debug_flow.py  verify_event_bus.py  verify_planner_hints_flow.py  verify_retrieval_reflection.py  verify_world_stream.py
server/tests/: conftest.py
(+113 files in other folders)
