[project]
name = "autonomous-village-server"
version = "0.1.0"
description = "Authoritative backend for the autonomous village simulation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "sqlalchemy>=2.0.32,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["migrations", "migrations.*", "tests", "tests.*", "scripts", "scripts.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
